<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.intq.main.vm.SearchViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/search_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_display_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/search_display_head_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/search_display_head_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryB"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/search_display_head_hint"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_display_head_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_display_head"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/sort_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/sort_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_star"
                    android:textColor="@color/colorPrimaryB"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/sort_hint"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sort_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/sort_star"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:theme="@style/switch_compat" />


                <TextView
                    android:id="@+id/sort_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_view"
                    android:textColor="@color/colorPrimaryB"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/sort_field"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/sort_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dip_10"
                    android:text="@string/sort_down"
                    android:textColor="@color/colorPrimaryB"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/sort_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sort_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/sort_down"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:theme="@style/switch_compat" />

                <TextView
                    android:id="@+id/sort_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_up"
                    android:textColor="@color/colorPrimaryB"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/sort_way"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/search_display_head_sort" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/search_loading"
                    style="@style/AVLoadingIndicatorView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    app:indicatorColor="@color/colorPrimaryD"
                    app:indicatorName="PacmanIndicator" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_magnify_black_48dp"
                    app:backgroundTint="@color/colorPrimaryD" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/search_bar_margin"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="@dimen/search_bar_margin"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <com.mancj.materialsearchbar.MaterialSearchBar
                    android:id="@+id/search_bar"
                    style="@style/search_bar_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mt_hint="@string/search_hint"
                    app:mt_placeholder="@string/search_placeholder" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </FrameLayout>
</layout>