<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.intq.main.vm.HomeTabViewModel" />

        <variable
            name="fragment"
            type="com.example.intq.main.fragment.HomeFragment" />
    </data>

    <RelativeLayout
        android:id="@+id/frag_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/search_title_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/search_title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:alpha="0.5"
                    android:background="#fff"
                    android:gravity="center"
                    android:text="@string/search_title_txt"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryB"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="RtlCompat" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/margin"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="vertical" />

            <androidx.cardview.widget.CardView
                android:id="@+id/search_bar_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/margin"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/search_bar_margin"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="@dimen/search_bar_margin"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <com.mancj.materialsearchbar.MaterialSearchBar
                    android:id="@+id/search_bar"
                    style="@style/search_bar_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mt_hint="@string/search_hint"
                    app:mt_maxSuggestionsCount="0"
                    app:mt_placeholder="@string/search_placeholder" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_layout"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tab_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_items"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    app:tabIndicatorColor="@color/colorPrimaryA"
                    app:tabIndicatorHeight="1dip"
                    app:tabMinWidth="40dip"
                    app:tabMode="scrollable"
                    app:tabPaddingEnd="5dip"
                    app:tabPaddingStart="5dip"
                    app:tabSelectedTextColor="@color/colorPrimaryA"
                    app:tabTextColor="@color/colorPrimaryC" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <ImageButton
                        android:id="@+id/tab_config"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@color/colorPrimaryB"
                        android:src="@drawable/ic_menu_animated" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/inner_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dip" />
        </LinearLayout>

    </RelativeLayout>

</layout>